# rsomics-vcf-norm

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: multiallelic.vcf  multisample.vcf
