[package]
name = "rsomics-vcf-norm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Left-align and normalize VCF indels — Rust port of bcftools norm"

[[bin]]
name = "rsomics-vcf-norm"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
noodles = { workspace = true, features = ["vcf"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
